hphp/hack/test/ifc/check/function_ptr.php.exp
=== IFC analysis results for function_ptr.php
File "function_ptr.php", line 66, characters 3-14:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "function_ptr.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "function_ptr.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "function_ptr.php", line 31, characters 3-13:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 62, characters 5-19:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 61, characters 7-15:
  Another program point contributing to the illegal flow
File "function_ptr.php", line 55, characters 5-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "function_ptr.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "function_ptr.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "function_ptr.php", line 31, characters 3-13:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 54, characters 7-15:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 53, characters 3-17:
  Another program point contributing to the illegal flow
File "function_ptr.php", line 26, characters 3-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "function_ptr.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "function_ptr.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "function_ptr.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 25, characters 3-12:
  Another program point contributing to the illegal flow
File "function_ptr.php", line 87, characters 3-12:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "function_ptr.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "function_ptr.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "function_ptr.php", line 72, characters 5-13:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 71, characters 7-15:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 86, characters 3-13:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 85, characters 3-20:
  Another program point contributing to the illegal flow
File "function_ptr.php", line 48, characters 3-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "function_ptr.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "function_ptr.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "function_ptr.php", line 31, characters 3-13:
  Another program point contributing to the illegal flow
  File "function_ptr.php", line 47, characters 3-17:
  Another program point contributing to the illegal flow
